comienza refactorización se añadió un comentario y se cambió merged.get(merged.size()-1) por merged.getLast() en la linea 81 de AvailabilityService